--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -17,7 +17,7 @@
 @import "./components/category";
 @import "./components/tag";
 @import "./components/post-list";
-// @import "./components/post-content";
-// @import "./components/markdown";
-// @import "./components/readmore";
+@import "./components/post-content";
+@import "./components/markdown";
+@import "./components/readmore";
 
