--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -5,8 +5,18 @@
 {{ end }}
 
 {{ define "stager" }}
-<main></main>
-<aside></aside>
-
+<main>
+    <div class="container">
+        <div id="post-content">
+            {{ partial "stager/post-content.html" . }}
+        </div>
+    </div>
+</main>
+<aside>
+    <div class="container">
+        <div id="content-related">
+            {{ partial "stager/content-related.html" . }}
+        </div>
+    </div>
+</aside>
 {{ end }}
-
