--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -10,11 +10,10 @@
 @import "./layouts/stager";
 @import "./layouts/footer";
 
-@import "./components/menu-main";
-@import "./components/menu-tree";
 @import "./components/breadcrumb";
+@import "./components/card";
+@import "./components/menutree";
+@import "./components/item";
+@import "./components/article";
 @import "./components/markdown";
 @import "./components/toc";
-@import "./components/card";
-@import "./components/article";
-@import "./components/item";
