--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -9,12 +9,7 @@
         </header>
 
         <div id="stager">
-            <aside>
-                {{ block "stager-aside" . }}{{ end }}
-            </aside>
-            <main>
-                {{ block "stager-main" . }}{{ end }}
-            </main>
+            {{ block "stager" . }}{{ end }}
         </div>
 
         <footer id="footer">
