--- a/assets/sass/basis/_init.scss
+++ b/assets/sass/basis/_init.scss
@@ -10,10 +10,13 @@ a {
     cursor: pointer;
     transition: .5s;
     text-decoration: none;
-    color: var(--slate-800);
+    color: var(--body-ft);
     &:hover {
-        color: var(--link);
+        color: var(--secondary);
     }
+}
+.active {
+    color: var(--secondary);
 }
 
 img {
