--- a/assets/sass/layouts/_header.scss
+++ b/assets/sass/layouts/_header.scss
@@ -1,55 +1,80 @@
 #header {
-    display:flex;
-    flex-direction:row;
-    align-items:center;
-    justify-content:space-between;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 
     .logo {
-        font-size:1.25rem;
-        font-weight:bold;
+        font-size: 1.25rem;
+        font-weight: bold;
+        padding: 1rem;
     }
 
     .nav {
-        background-color:var(--header-bg);
+        background-color: var(--header-bg);
 
-        width:100vw;
+        position: fixed;
+        top: 60px;
+        left: -100vw;
+        z-index: 20;
 
-        padding:1rem;
+        width: 100vw;
+        height: 100%;
 
-        position:fixed;
-        top:60px;
-        left:-100vw;
-        bottom:0;
-        z-index:20;
+        padding: 1rem;
+
+        font-size: .875rem;
+
+        .menu-main {
+            margin-bottom: 1rem;
+            list-style: none;
+            .menu-item {
+                margin-bottom: .25rem;
+                i {
+                    font-size: 1.375rem;
+                }
+            }
+        }
     }
 
     .toggle {
-        font-size:1.5rem;
+        padding: 1rem;
+        font-size: 1.5rem;
         .close {
-            display:none;
+            display: none;
         }
     }
-
 }
 
-@media (min-width:$md) {
+
+@media (min-width: $lg) {
     #header {
         .nav {
-            position:relative;
-            top:auto;
-            left: auto;
-            bottom:auto;
-
-            width: auto;
-            padding: 0;
-
             display: flex;
             flex-direction: row;
-            align-items: center;
-            justify-content: flex-start;
+
+            position: relative;
+            top: auto;
+            left: auto;
+            z-index: auto;
+
+            width: auto;
+            height: auto;
+
+            .menu-main {
+                margin-bottom: 0;
+                margin-left: 1rem;
+                .menu-item {
+                    display: inline-block;
+                    margin-bottom: 0;
+                    margin-left: 1rem;
+                }
+            }
         }
+
         .toggle {
-            display:none;
+            display: none;
         }
     }
 }
