--- a/assets/sass/layouts/_stager.scss
+++ b/assets/sass/layouts/_stager.scss
@@ -1,65 +1,180 @@
 #stager {
-    main {
+    aside {
+        background-color: var(--stager-bg);
+
+        position: fixed;
+        top: 60px;
+        left: -100vw;
+        z-index: 5;
+
+        width: 100vw;
+        height: 100%;
+
         .container {
-            background-color: var(--white);
-            padding: .5rem;
-            .container-inner {
-                padding: .5rem;
+            padding: 1rem;
+        }
+    }
+
+    main {
+        background-color: var(--stager-bg-light);
+    }
+
+    .toggles {
+        border-radius: .375rem;
+        border: 1px solid var(--body-bd);
+        background-color: var(--header-bg);
+        padding: .25rem;
+
+        position: fixed;
+        right: 1rem;
+        bottom: 2.5rem;
+        z-index: 10;
+
+        font-size: 1.375rem;
+
+        a {
+            display: block;
+            padding: .125rem .25rem;
+            border-radius: .25rem;
+            &:hover {
+                background-color: var(--red-300);
+                color: var(--white);
             }
         }
-        .blog-list {
-            display: flex;
-            flex-flow: wrap;
-            .container-inner {
-                width: 100%;
+
+        .toside {
+            .close {
+                display: none;
             }
         }
     }
-    aside {
-        .container {
-            padding: .75rem;
-            .container-inner {
-                padding: .75rem;
-            }
-        }
+}
+
+#breadcrumb {
+    padding: 1rem;
+}
+
+#content {
+    padding: 0 1rem 1rem;
+    .container-left {
+        margin-bottom: 1rem;
+    }
+}
+
+#bloglist {
+    padding: .5rem;
+    .item-container {
+        padding: .5rem;
     }
 }
 
 @media (min-width: $sm) {
     #stager {
-        main {
+        aside {
             .container {
-                background-color: var(--stager-bg-light);
-                padding: .75rem;
-                .container-inner {
-                    padding: .75rem;
-                }
+                padding: 1.5rem;
             }
         }
     }
+
+    #breadcrumb {
+        padding: 1.5rem 1.5rem 0;
+    }
+
+    #content {
+        padding: 1.5rem;
+        .container-left {
+            margin-bottom: 1.5rem;
+        }
+    }
+
+    #bloglist {
+        padding: .75rem;
+        .item-container {
+            padding: .75rem;
+        }
+    }
+}
+
+
+@media (min-width: $lg) {
+    #stager {
+        display: flex;
+        flex-direction: row;
+        align-items: stretch;
+        justify-content: flex-start;
+
+        aside {
+            position: relative;
+            top: auto;
+            left: auto;
+            z-index: auto;
+
+            width: 350px;
+            height: auto;
+
+            .container {
+                position: sticky;
+                top: 60px;
+            }
+        }
+        main {
+            flex: 1;
+            overflow: auto;
+        }
+
+        .toggles {
+            .toside {
+                display: none;
+            }
+        }
+    }
+
+
 }
 
 @media (min-width: $xl) {
-    #stager {
-        main {
-            .blog-list {
-                .container-inner {
-                    width: 50%;;
-                }
-            }
+
+    #bloglist {
+        display: flex;
+        flex-flow: wrap;
+        .item-container {
+            width: 50%;
         }
     }
+
 }
 
 @media (min-width: $xxl) {
+
     #stager {
-        main {
-            .blog-list {
-                .container-inner {
-                    width: 33.33%;;
-                }
+        .toggles {
+            .totoc {
+                display: none;
             }
         }
     }
-}
 
+    #content {
+        display: flex;
+        flex-direction: row;
+        align-items: stretch;
+        justify-content: flex-start;
+
+        .container-left {
+            flex: 1;
+            margin-bottom: 0;
+            margin-right: 1.5rem;
+        }
+        .container-right {
+            width: 300px;
+        }
+    }
+
+    #bloglist {
+        .item-container {
+            width: 33.33%;
+        }
+    }
+
+}
