--- a/exampleSite/public/css/main.css
+++ b/exampleSite/public/css/main.css
@@ -60,15 +60,12 @@
 
 :root[data-theme="light"] {
   --primary: var(--blue-600);
-  --link: var(--red-600);
+  --secondary: var(--red-600);
   --body-bg: var(--slate-000);
+  --body-bd: var(--slate-300);
   --body-ft: var(--slate-800);
-  --body-bd: var(--slate-200);
+  --body-ft-hover: var(--primary);
   --header-bg: var(--white);
-  --header-ft: var(--slate-800);
-  --header-ft-hover: var(--primary)
-
-    --stager-bg-dark: var(--slate-200);
   --stager-bg: var(--slate-100);
   --stager-bg-light: var(--slate-000);
   --footer-bg: var(--header-bg);
@@ -85,9 +82,12 @@ a {
   cursor: pointer;
   transition: .5s;
   text-decoration: none;
-  color: var(--slate-800); }
+  color: var(--body-ft); }
   a:hover {
-    color: var(--link); }
+    color: var(--secondary); }
+
+.active {
+  color: var(--secondary); }
 
 img {
   display: block;
@@ -98,12 +98,12 @@ html {
   height: 100%; }
 
 body {
+  height: 100%;
   background-color: var(--body-bg);
   color: var(--body-ft);
-  line-height: 1.5rem;
   font-size: 16px;
+  line-height: 1.5rem;
   font-family: Poppins, sans-serif;
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: stretch;
@@ -112,32 +112,135 @@ body {
 #header {
   background-color: var(--header-bg);
   border-bottom: 1px solid var(--body-bd);
-  width: 100%;
   height: 60px;
-  padding: 1rem;
+  width: 100%;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 20; }
 
 #stager {
+  background-color: var(--body-bg);
   flex: 1;
-  margin-top: 60px; }
-  #stager aside {
-    background-color: var(--stager-bg);
+  padding-top: 60px; }
+
+#footer {
+  background-color: var(--header-bg);
+  color: var(--footer-ft);
+  border-top: 1px solid var(--body-bd); }
+
+#header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between; }
+  #header .logo {
+    font-size: 1.25rem;
+    font-weight: bold;
+    padding: 1rem; }
+  #header .nav {
+    background-color: var(--header-bg);
     position: fixed;
     top: 60px;
     left: -100vw;
-    z-index: 10;
+    z-index: 20;
     width: 100vw;
-    height: 100%; }
-  #stager main {
-    background-color: var(--stager-bg-light); }
+    height: 100%;
+    padding: 1rem;
+    font-size: .875rem; }
+    #header .nav .menu-main {
+      margin-bottom: 1rem;
+      list-style: none; }
+      #header .nav .menu-main .menu-item {
+        margin-bottom: .25rem; }
+        #header .nav .menu-main .menu-item i {
+          font-size: 1.375rem; }
+  #header .toggle {
+    padding: 1rem;
+    font-size: 1.5rem; }
+    #header .toggle .close {
+      display: none; }
 
-#footer {
-  border-top: 1px solid var(--body-bd);
-  background-color: var(--footer-bg);
-  color: var(--footer-ft); }
+@media (min-width: 1000px) {
+  #header .nav {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    top: auto;
+    left: auto;
+    z-index: auto;
+    width: auto;
+    height: auto; }
+    #header .nav .menu-main {
+      margin-bottom: 0;
+      margin-left: 1rem; }
+      #header .nav .menu-main .menu-item {
+        display: inline-block;
+        margin-bottom: 0;
+        margin-left: 1rem; }
+  #header .toggle {
+    display: none; } }
+
+#stager aside {
+  background-color: var(--stager-bg);
+  position: fixed;
+  top: 60px;
+  left: -100vw;
+  z-index: 5;
+  width: 100vw;
+  height: 100%; }
+  #stager aside .container {
+    padding: 1rem; }
+
+#stager main {
+  background-color: var(--stager-bg-light); }
+
+#stager .toggles {
+  border-radius: .375rem;
+  border: 1px solid var(--body-bd);
+  background-color: var(--header-bg);
+  padding: .25rem;
+  position: fixed;
+  right: 1rem;
+  bottom: 2.5rem;
+  z-index: 10;
+  font-size: 1.375rem; }
+  #stager .toggles a {
+    display: block;
+    padding: .125rem .25rem;
+    border-radius: .25rem; }
+    #stager .toggles a:hover {
+      background-color: var(--red-300);
+      color: var(--white); }
+  #stager .toggles .toside .close {
+    display: none; }
+
+#breadcrumb {
+  padding: 1rem; }
+
+#content {
+  padding: 0 1rem 1rem; }
+  #content .container-left {
+    margin-bottom: 1rem; }
+
+#bloglist {
+  padding: .5rem; }
+  #bloglist .item-container {
+    padding: .5rem; }
+
+@media (min-width: 600px) {
+  #stager aside .container {
+    padding: 1.5rem; }
+  #breadcrumb {
+    padding: 1.5rem 1.5rem 0; }
+  #content {
+    padding: 1.5rem; }
+    #content .container-left {
+      margin-bottom: 1.5rem; }
+  #bloglist {
+    padding: .75rem; }
+    #bloglist .item-container {
+      padding: .75rem; } }
 
 @media (min-width: 1000px) {
   #stager {
@@ -152,80 +255,41 @@ body {
       z-index: auto;
       width: 350px;
       height: auto; }
+      #stager aside .container {
+        position: sticky;
+        top: 60px; }
     #stager main {
-      flex: 1; } }
-
-#header {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between; }
-  #header .logo {
-    font-size: 1.25rem;
-    font-weight: bold; }
-  #header .nav {
-    background-color: var(--header-bg);
-    width: 100vw;
-    padding: 1rem;
-    position: fixed;
-    top: 60px;
-    left: -100vw;
-    bottom: 0;
-    z-index: 20; }
-  #header .toggle {
-    font-size: 1.5rem; }
-    #header .toggle .close {
-      display: none; }
-
-@media (min-width: 800px) {
-  #header .nav {
-    position: relative;
-    top: auto;
-    left: auto;
-    bottom: auto;
-    width: auto;
-    padding: 0;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start; }
-  #header .toggle {
-    display: none; } }
-
-#stager main .container {
-  background-color: var(--white);
-  padding: .5rem; }
-  #stager main .container .container-inner {
-    padding: .5rem; }
-
-#stager main .blog-list {
-  display: flex;
-  flex-flow: wrap; }
-  #stager main .blog-list .container-inner {
-    width: 100%; }
-
-#stager aside .container {
-  padding: .75rem; }
-  #stager aside .container .container-inner {
-    padding: .75rem; }
-
-@media (min-width: 600px) {
-  #stager main .container {
-    background-color: var(--stager-bg-light);
-    padding: .75rem; }
-    #stager main .container .container-inner {
-      padding: .75rem; } }
+      flex: 1;
+      overflow: auto; }
+    #stager .toggles .toside {
+      display: none; } }
 
 @media (min-width: 1200px) {
-  #stager main .blog-list .container-inner {
-    width: 50%; } }
+  #bloglist {
+    display: flex;
+    flex-flow: wrap; }
+    #bloglist .item-container {
+      width: 50%; } }
 
 @media (min-width: 1500px) {
-  #stager main .blog-list .container-inner {
+  #stager .toggles .totoc {
+    display: none; }
+  #content {
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    justify-content: flex-start; }
+    #content .container-left {
+      flex: 1;
+      margin-bottom: 0;
+      margin-right: 1.5rem; }
+    #content .container-right {
+      width: 300px; }
+  #bloglist .item-container {
     width: 33.33%; } }
 
 #footer .copyright {
-  padding: 1rem;
+  padding: .75rem 1rem;
   font-size: .875rem;
   text-align: center; }
   #footer .copyright span {
@@ -233,75 +297,126 @@ body {
     #footer .copyright span i {
       margin-right: .25rem; }
 
-#footer .toggles {
-  position: fixed;
-  right: 1rem;
-  bottom: 2rem;
-  z-index: 10;
-  border: 1px solid var(--body-bd);
-  border-radius: .375rem;
-  background-color: var(--header-bg);
-  font-size: 1.375rem;
-  padding: .25rem; }
-  #footer .toggles a {
-    display: block;
-    padding: .125rem .375rem;
-    border-radius: .25rem; }
-    #footer .toggles a:hover {
-      background-color: var(--blue-300);
-      color: var(--white); }
-  #footer .toggles .tolist .close {
-    display: none; }
-
-@media (min-width: 1000px) {
-  #footer .toggles .tolist {
-    display: none; } }
-
-.menu-main {
-  list-style: none;
-  margin-bottom: 1rem; }
-  .menu-main .menu-item {
-    padding: .25rem 0; }
-    .menu-main .menu-item a {
-      color: var(--body-ft); }
-      .menu-main .menu-item a:hover {
-        color: var(--link); }
-    .menu-main .menu-item .active {
-      color: var(--link); }
-
-@media (min-width: 800px) {
-  .menu-main {
-    font-size: .875rem;
-    margin-bottom: 0;
-    margin-left: 3rem; }
-    .menu-main .menu-item {
-      display: inline;
-      margin: 0 .5rem; } }
-
-.menu-tree {
-  list-style: none; }
-  .menu-tree a {
-    display: block;
-    margin-bottom: .5rem; }
-  .menu-tree .active {
-    color: red; }
-  .menu-tree .menu-tree {
-    display: none;
-    margin-left: 1rem; }
-
 /********************************************************
 * CSS - Breadcrumb 
 * Author: Homecat
 * Email: 13050082@qq.com    Homepage: genway.com.cn
 ********************************************************/
 .breadcrumb {
-  font-size: .875rem; }
+  font-size: .875rem;
+  line-height: .875rem; }
   .breadcrumb .breadcrumb-item {
     display: inline; }
     .breadcrumb .breadcrumb-item + .breadcrumb-item:before {
       content: "|";
       margin: 0 .75rem;
       font-size: .75rem; }
+
+.card {
+  border-radius: .375rem;
+  border: 1px solid var(--body-bd);
+  background-color: var(--white);
+  font-size: .875rem;
+  margin-bottom: 1rem; }
+  .card .card-title {
+    border-bottom: 1px solid var(--body-bd);
+    padding: .75rem 1rem .5rem;
+    font-weight: bold; }
+  .card .card-content {
+    padding: 1rem 1.5rem .5rem; }
+    .card .card-content .dumbbell {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: .5rem; }
+      .card .card-content .dumbbell .dashed-line {
+        flex: 1;
+        border-top: 1px dashed var(--body-ft);
+        margin: 0 1rem; }
+      .card .card-content .dumbbell:hover .dashed-line {
+        flex: 1;
+        border-top: 1px dashed var(--secondary);
+        margin: 0 1rem; }
+    .card .card-content .follow {
+      display: inline-block;
+      margin-right: 1rem;
+      margin-bottom: .5rem; }
+      .card .card-content .follow span {
+        margin-right: .25rem; }
+    .card .card-content .normal {
+      display: block;
+      margin-bottom: .5rem;
+      line-height: 1.25rem; }
+
+@media (min-width: 600px) {
+  .card {
+    margin-bottom: 1.5rem; } }
+
+.menu-tree {
+  list-style: none; }
+  .menu-tree a {
+    display: block;
+    margin-bottom: .5rem; }
+  .menu-tree .menu-tree {
+    display: none;
+    margin-left: 1rem; }
+
+.item {
+  background-color: var(--white);
+  border-radius: .375rem;
+  border: 1px solid var(--body-bd);
+  padding: 1rem; }
+  .item .item-title {
+    font-size: 1.125rem;
+    font-weight: bold;
+    height: 1.5rem;
+    overflow-y: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+    text-overflow: ellipsis; }
+  .item p {
+    margin: .5rem 0;
+    height: 6rem;
+    overflow-y: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 4;
+    text-overflow: ellipsis; }
+  .item .item-meta {
+    font-size: .875rem; }
+    .item .item-meta span {
+      margin-right: 1rem; }
+      .item .item-meta span i {
+        margin-right: .25rem;
+        color: var(--red-600); }
+
+article {
+  border-radius: .375rem;
+  border: 1px solid var(--body-bd);
+  background-color: var(--white);
+  padding: 1rem; }
+  article .title {
+    background-color: var(--stager-bg-light);
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: bold;
+    padding: 2rem 1rem 1rem; }
+  article .meta {
+    background-color: var(--stager-bg-light);
+    text-align: center;
+    font-size: .875rem;
+    padding: 0 1rem 2rem; }
+    article .meta span {
+      margin-right: 1rem; }
+  article .content {
+    margin: 2rem auto;
+    max-width: 900px; }
+
+@media (min-width: 600px) {
+  article {
+    padding: 1.5rem; } }
 
 .markdown h2 {
   font-size: 1.375rem;
@@ -423,121 +538,11 @@ body {
       padding: .25rem .5rem;
       text-align: center; }
 
-#TableOfContents {
-  background-color: var(--red-000);
-  padding: 1rem 1.5rem; }
-  #TableOfContents ul {
-    font-size: .875rem;
-    list-style: none; }
-    #TableOfContents ul li {
-      margin-bottom: .25rem; }
-      #TableOfContents ul li ul {
-        margin-left: 1rem;
-        margin-top: .25rem; }
-
-.card {
-  border-radius: .375rem;
-  border: 1px solid var(--body-bd);
-  background-color: var(--white);
-  font-size: .875rem; }
-  .card .card-title {
-    border-bottom: 1px solid var(--body-bd);
-    padding: .75rem 1rem .5rem;
-    font-weight: bold; }
-  .card .card-content {
-    padding: 1rem 1.5rem .5rem; }
-    .card .card-content .dumbbell {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: space-between;
-      margin-bottom: .5rem; }
-      .card .card-content .dumbbell .dashed-line {
-        flex: 1;
-        border-top: 1px dashed var(--body-ft);
-        margin: 0 1rem; }
-      .card .card-content .dumbbell:hover .dashed-line {
-        flex: 1;
-        border-top: 1px dashed var(--link);
-        margin: 0 1rem; }
-    .card .card-content .follow {
-      display: inline-block;
-      margin-right: 1rem;
-      margin-bottom: .5rem; }
-      .card .card-content .follow span {
-        margin-right: .25rem; }
-
-article .container-left .title {
-  background-color: var(--body-bg);
-  text-align: center;
-  font-size: 1.375rem;
-  font-weight: bold;
-  padding: 2rem 1rem 0; }
-
-article .container-left .meta {
-  background-color: var(--body-bg);
-  text-align: center;
+#TableOfContents ul {
   font-size: .875rem;
-  padding: 1rem 1rem 2rem; }
-  article .container-left .meta span {
-    margin-right: 1rem; }
-
-article .container-left .content {
-  margin: 2rem auto;
-  max-width: 900px; }
-
-article .container-right {
-  padding-top: 1.75rem; }
-
-@media (min-width: 600px) {
-  article {
-    background-color: var(--white);
-    border-radius: .375rem;
-    border: 1px solid var(--body-bd);
-    padding: 1.5rem; } }
-
-@media (min-width: 1500px) {
-  article {
-    display: flex;
-    flex-direction: row;
-    align-items: stretch;
-    justify-content: flex-start; }
-    article .container-left {
-      flex: 1; }
-    article .container-right {
-      width: 350px;
-      padding-top: 0;
-      padding-left: 1.75rem; }
-      article .container-right .container-right-inner {
-        position: sticky;
-        top: 84px; } }
-
-.item {
-  background-color: var(--white);
-  border-radius: .375rem;
-  border: 1px solid var(--body-bd);
-  padding: 1rem; }
-  .item .item-title {
-    font-size: 1.125rem;
-    font-weight: bold;
-    height: 1.5rem;
-    overflow-y: hidden;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 1;
-    text-overflow: ellipsis; }
-  .item p {
-    margin: .5rem 0;
-    height: 6rem;
-    overflow-y: hidden;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 4;
-    text-overflow: ellipsis; }
-  .item .item-meta {
-    font-size: .875rem; }
-    .item .item-meta span {
-      margin-right: 1rem; }
-      .item .item-meta span i {
-        margin-right: .25rem;
-        color: var(--red-600); }
+  list-style: none; }
+  #TableOfContents ul li {
+    margin-bottom: .25rem; }
+    #TableOfContents ul li ul {
+      margin-left: 1rem;
+      margin-top: .25rem; }
