--- a/layouts/partials/stager/blog-list.html
+++ b/layouts/partials/stager/blog-list.html
@@ -1,26 +1,20 @@
-<div class="blog-list">
-    {{ range .Paginator.Pages }}
-    <div class="container-inner">
-        <section class="item">
-            <div class="item-title">
-                <a href="{{.Permalink}}"><b>{{ .Title }}</b></a>
-            </div>
-            {{ .Summary }}
-            <div class="item-meta">
-                <span>
-                    <i class="bi bi-calendar3"></i>
-                    {{.Date.Format "Jan 2, 2006"}}
-                </span>
-                <span>
-                    <i class="bi bi-person-circle"></i>
-                    {{ .Params.author }}
-                </span>
-            </div>
-        </section>
-    </div>
-    {{ end }}
+{{ range .Paginator.Pages }}
+<div class="item-container">
+    <section class="item">
+        <div class="item-title">
+            <a href="{{.Permalink}}"><b>{{ .Title }}</b></a>
+        </div>
+        {{ .Summary }}
+        <div class="item-meta">
+            <span>
+                <i class="bi bi-calendar3"></i>
+                {{.Date.Format "Jan 2, 2006"}}
+            </span>
+            <span>
+                <i class="bi bi-person-circle"></i>
+                {{ .Params.author }}
+            </span>
+        </div>
+    </section>
 </div>
-
-
-
-
+{{ end }}
