--- a/layouts/taxonomy/list.html
+++ b/layouts/taxonomy/list.html
@@ -1,19 +1,26 @@
-{{ define "stager-aside" }}
-<div class="container">
-    <div class="container-inner">
-        {{ partial "stager/pub-category.html" . }}
+{{ define "stager" }}
+<aside>
+    <div class="container">
+        {{ partial "stager/common-category.html" . }}
+        {{ partial "stager/common-tag.html" . }}
     </div>
-    <div class="container-inner">
-        {{ partial "stager/pub-tag.html" . }}
-    </div>
-</div>
-{{ end }}
+</aside>
 
-{{ define "stager-main" }}
-<div class="container">
-    <div class="container-inner">
-        {{ partial "stager/pub-breadcrumb.html" . }}
+<main>
+    <div id="breadcrumb">
+        {{ partial "stager/common-breadcrumb.html" . }}
     </div>
-    {{ partial "stager/blog-list.html" . }}
+    <div id="bloglist">
+        {{ partial "stager/blog-list.html" . }}
+    </div>
+</main>
+
+<div class="toggles">
+    <div class="toside">
+        <a class="open"><i class="bi bi-layout-sidebar"></i></a>
+        <a class="close"><i class="bi bi-x"></i></a>
+    </div>
+    <a href="#" class="totop"><i class="bi bi-chevron-up"></i></a>
 </div>
+
 {{ end }}
