--- a/assets/sass/components/_blog-content.scss
+++ b/assets/sass/components/_blog-content.scss
@@ -27,9 +27,17 @@
 
     .content {
         max-width: 900px;
-        padding: 1rem 0 5rem;
+        padding: 1rem 0 3rem;
         margin: 0 auto;
         color: var(--slate-900);
     }
 
+}
+
+@media (min-width: $xl) {
+    .blog-content {
+        .content {
+            padding: 1rem 0 5rem;
+        }
+    }
 }
