--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -14,7 +14,7 @@
         </div>
     </main>
     
-    <aside>
+    <aside id="button">
         <div class="item-container">
             <div class="item-sub-container">
                 {{ partial "card-category.html" . }}
@@ -25,6 +25,10 @@
             </div>
         </div>
     </aside>
+</div>
+
+<div id="button-toggle">
+    <a href="#button"><i class="bi bi-list-ul"></i></a>
 </div>
 {{ end }}
 
