--- a/assets/sass/layouts/_stager.scss
+++ b/assets/sass/layouts/_stager.scss
@@ -19,6 +19,23 @@
     }
 }
 
+#button-toggle {
+    position: fixed;
+    right: 1rem;
+    bottom: 1rem;
+    z-index: 100;
+
+    a {
+        display: block;
+        background-color: var(--primary-500);
+        border: 1px solid var(--white);
+        padding: .25rem .5rem;
+        i {
+            font-size: 1.5rem;
+            color: var(--white);
+        }
+    }
+}
 
 @media (min-width: $sm) {
 
@@ -54,6 +71,10 @@
                 }
             }
         }
+    }
+
+    #button-toggle {
+        display: none;
     }
 }
 
